--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <html>
-<form method="GET" action="../connect.php">
+<form method="POST" action="../connect.php">
 Username<input type="text" name="username"><br>
 Password<input type="text" name="password">
 <input type="submit" value="Send">
